<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/finish_project_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/font_nanumgothic_bold"
        android:text="@string/add_schedule_bottom_title"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="25dp"
        android:fontFamily="@font/font_nanumgothic_bold"
        android:text="@string/add_schedule_bottom_content"
        android:textColor="@color/color_flow"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/finish_project_tv" />

    <EditText
        android:id="@+id/remove_schedule_content_et"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:backgroundTint="@color/color_flow"
        android:fontFamily="@font/font_nanumgothic_bold"
        android:hint="@string/add_schedule_bottom_content_hint"
        android:textColor="@color/black"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/font_nanumgothic_bold"
        android:text="@string/add_schedule_bottom_term"
        android:textColor="@color/color_flow"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/remove_schedule_content_et" />

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/add_schedule_switch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:layout_marginEnd="16dp"
        android:theme="@style/Switch"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/remove_schedule_content_et" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="5dp"
        android:text="@string/add_schedule_bottom_essential"
        android:textColor="@color/color_flow"
        android:textSize="14sp"
        android:fontFamily="@font/font_nanumgothic_bold"
        app:layout_constraintEnd_toStartOf="@+id/add_schedule_switch"
        app:layout_constraintTop_toBottomOf="@+id/remove_schedule_content_et" />

    <TextView
        android:id="@+id/startdate_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="15dp"
        android:text="@string/add_schedule_bottom_start"
        android:textColor="@color/black"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <EditText
        android:id="@+id/add_schedule_start_et"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16sp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="16sp"
        android:backgroundTint="@color/color_flow"
        android:focusable="false"
        android:gravity="end"
        android:hint="@string/add_schedule_bottom_date_hint"
        android:textColor="@color/black"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:text="@string/add_schedule_bottom_end"
        android:textColor="@color/black"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/add_schedule_start_et" />

    <EditText
        android:id="@+id/add_schedule_end_et"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:backgroundTint="@color/color_flow"
        android:clickable="false"
        android:focusable="false"
        android:gravity="end"
        android:hint="@string/add_schedule_bottom_date_hint"
        android:textColor="@color/black"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/add_schedule_start_et" />

    <Button
        android:id="@+id/remove_schedule_btn"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginStart="19dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="19dp"
        android:layout_marginBottom="15dp"
        android:background="@color/color_flow"
        android:text="@string/add_schedule_bottom_btn"
        android:textColor="@color/white"
        android:textSize="14sp"
        android:fontFamily="@font/font_nanumgothic_bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/add_schedule_end_et" />

</androidx.constraintlayout.widget.ConstraintLayout>