<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
<data>
        <variable
            name="vm"
            type="com.example.project_flow_android.viewmodel.RegisterViewModel"
            />
    </data>

<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.sign.ui.EditPasswordActivity">
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/register_password_layout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:paddingTop="0dp"
        app:boxBackgroundColor="@android:color/transparent"
        app:layout_constraintEnd_toStartOf="@+id/guideline9"
        app:layout_constraintStart_toStartOf="@+id/guideline7"
        app:layout_constraintTop_toBottomOf="@+id/register_password_tv">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/register_password_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@={vm.userPassword}"
            android:drawablePadding="16dp"
            android:inputType="text"
            android:singleLine="true">

        </com.google.android.material.textfield.TextInputEditText>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/register_repassword_layout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:paddingTop="0dp"
        app:boxBackgroundColor="@android:color/transparent"
        app:layout_constraintEnd_toStartOf="@+id/guideline9"
        app:layout_constraintStart_toStartOf="@+id/guideline7"
        app:layout_constraintTop_toBottomOf="@+id/register_email_tv">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/register_repassword_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawablePadding="16dp"
            android:text="@={vm.userRePassword}"
            android:inputType="textEmailAddress">

        </com.google.android.material.textfield.TextInputEditText>
    </com.google.android.material.textfield.TextInputLayout>


    <TextView
        android:id="@+id/register_email_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/re_password"
        android:textSize="15sp"
        android:fontFamily="@font/nanumgothic_regular"
        app:layout_constraintStart_toStartOf="@+id/guideline7"
        app:layout_constraintTop_toBottomOf="@+id/register_password_layout" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/register_btn"
        android:layout_width="0dp"
        android:layout_height="66dp"
        android:layout_marginBottom="28dp"
        android:text="@string/check"
        android:fontFamily="@font/nanumgothic_regular"
        android:onClick="@{()->vm.doLogin()}"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/guideline9"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/guideline7">

    </com.google.android.material.button.MaterialButton>

    <TextView
        android:id="@+id/register_title_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/final_word"
        android:layout_marginTop="40dp"
        android:fontFamily="@font/nanumgothic_bold"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="@+id/guideline7"
        app:layout_constraintTop_toTopOf="@+id/guideline8" />

    <TextView
        android:id="@+id/register_title_fi_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:fontFamily="@font/nanumgothic_bold"
        android:text="@string/final_password"
        app:layout_constraintStart_toStartOf="@+id/guideline7"
        app:layout_constraintTop_toBottomOf="@+id/register_title_tv" />

    <TextView
        android:id="@+id/register_title_th_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="15sp"
        android:fontFamily="@font/nanumgothic_regular"
        android:text="@string/speical_word"
        app:layout_constraintStart_toStartOf="@+id/guideline7"
        app:layout_constraintTop_toBottomOf="@+id/register_title_fi_tv" />

    <TextView
        android:id="@+id/register_password_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="70dp"
        android:text="@string/password"
        android:fontFamily="@font/nanumgothic_regular"
        app:layout_constraintStart_toStartOf="@+id/guideline7"
        app:layout_constraintTop_toBottomOf="@+id/register_title_th_tv" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="30dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="40dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="380dp" />

    <TextView
        android:id="@+id/comment_tv"
        android:layout_width="6dp"
        android:layout_height="15dp"
        android:text="@{vm.changeComment2}"
        android:textColor="@color/red"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/register_btn"
        app:layout_constraintEnd_toStartOf="@+id/guideline9"
        app:layout_constraintStart_toStartOf="@+id/guideline7" />


</androidx.constraintlayout.widget.ConstraintLayout>
</layout>