<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.chat.fragment.ChatCreateFragment">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="25dp"
        android:fontFamily="@font/font_nanumgothic_bold"
        android:text="@string/new_chatting"
        android:textColor="@color/black"
        android:textSize="20sp" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/chat_create_user_rv"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="5dp"
        android:layout_weight="1" />

    <View
        android:layout_width="370dp"
        android:layout_height="1px"
        android:layout_gravity="center_horizontal" />

    <TextView
        android:id="@+id/chat_create_project_name_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_marginStart="5dp"
        android:textColor="@color/black"
        android:textSize="14sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="40dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/chat_create_user"
            android:textColor="@color/color_flow"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/chat_create_user_name_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="20dp"
            android:textColor="@color/black"
            android:textSize="14sp"
            android:textStyle="bold" />

    </LinearLayout>

    <Button
        android:id="@+id/chat_create_btn"
        android:layout_width="380dp"
        android:layout_height="55dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="10dp"
        android:backgroundTint="@color/color_flow"
        android:fontFamily="@font/font_nanumgothic_bold"
        android:gravity="center"
        android:text="@string/chat_create_start"
        android:textColor="@color/white"
        android:textSize="16sp" />

</LinearLayout>